WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76878
REGRESSION(
r105396
): drag state is not cleared after each drag
https://bugs.webkit.org/show_bug.cgi?id=76878
Summary
REGRESSION(r105396): drag state is not cleared after each drag
Ryosuke Niwa
Reported
2012-01-23 16:33:28 PST
We should always be calling clearDragState in performDragAndDrop.
Attachments
fixes the bug
(8.12 KB, patch)
2012-01-23 16:43 PST
,
Ryosuke Niwa
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-01-23 16:41:33 PST
http://crbug.com/110842
Ryosuke Niwa
Comment 2
2012-01-23 16:43:12 PST
Created
attachment 123657
[details]
fixes the bug
Ryosuke Niwa
Comment 3
2012-01-23 16:47:35 PST
Committed
r105659
: <
http://trac.webkit.org/changeset/105659
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug